@@ -733,10 +733,10 @@ by the user. The following is a list of the automatically defined construction
 variables:
 
 .IP AR
-The static library command.
+The static library archiver.
 
 .IP ARFLAGS
-General options passed to the static library command.
+General options passed to the static library archiver.
 
 .IP ARCOM
 The command line used to generate a static library from object files.
@@ -921,6 +921,12 @@ The prefix used for executable file names.
 
 .IP PROGSUFFIX
 The suffix used for executable file names.
+
+.IP RANLIB
+The archive indexer.
+
+.IP RANLIBFLAGS
+General options passed to the archive indexer.
 
 .IP SCANNERS
 A list of the available implicit dependency scanners. [CScan] by default.
